--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,9 @@
 
 }
 
+.content {
+  margin: 0;
+}
 .description {
   display: flex;
 }
@@ -189,7 +192,7 @@
   font-weight: bold;
 }
 
-.table__cell_text_general {
+.table__cell_text {
   margin: 20px 0;
   line-height: 1.2;
   font-size: 18px;
@@ -245,12 +248,176 @@
   font-weight: normal;
 }
 
+.kaufman{
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+}
 
+.kaufman__section-title_theme_dark {
+  width: 60%;
+  margin: 90px auto 20px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+}
 
-/* и элемента с модификатором вида ключ-значение */
+.kaufman__section-title_text_theme_dark {
+  color: white;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.kaufman__section-subtitle_theme_dark {
+  width: 60%;
+  margin: 0;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  z-index: 1;
+}
+
+.kaufman__section-subtitle_text_theme_dark {
+  color: white;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+
+}
+
+.table_theme_dark {
+  width: 1100px;
+  align-self: center;
+  margin: 0 auto 90px;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__cell_heading_theme_dark {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__cell_text_theme_dark {
+  margin: 20px 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer {
+  background-color: #1f1f1f;
+  min-height: 350px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.footer__columns {
+  width: 90%;
+  margin: 60px auto 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  justify-content: space-between;
+}
+
+.footer__author {
+  color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 18px 0;
+  align-self: flex-end;
+}
+
+.logo_place_footer {
+  margin: 0;
+  border: none;
+  width: 183px;
+  height: 35px;
+  background-image: url(../images/logo_place_footer.svg);
+  align-self: flex-start;
+}
+
+.footer__columns_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__columns_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading {
+  color: white;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 0 20px;
+}
+
+.footer__column-links {
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+
+}
+.footer__column-links:last-of-type {
+  margin-bottom: 16px
+}
+
+.footer__columns_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-link {
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.footer__column-link:last-of-type {
+  margin-bottom: 16px;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
 }
