--- a/styles/style.css
+++ b/styles/style.css
@@ -326,18 +326,18 @@
   align-self: flex-start;
 }
 
-.footer__column_content_copyright {
+.footer__column {
   margin: 0;
-  flex-basis: 711px;
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
 .footer__column_content_info {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
   align-self: flex-start;
   width: fit-content;
 }
@@ -367,9 +367,6 @@
 
 
 .footer__column_content_social {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
   align-self: flex-start;
   width: fit-content;
 }
@@ -380,10 +377,6 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
-}
-
-.footer__column-link:last-of-type {
-  /*margin-bottom: 16px;*/
 }
 
 .footer__social-icon {
