--- a/blocks/resources/__logo/resouces__logo.css
+++ b/blocks/resources/__logo/resouces__logo.css
@@ -2,4 +2,7 @@
   list-style-type: none;
   width: 270px;
   height: 38px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
