--- a/blocks/resources/__logo/resouces__logo.css
+++ b/blocks/resources/__logo/resouces__logo.css
@@ -3,6 +3,7 @@
   width: 270px;
   height: 38px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-content: center;
   justify-content: center;
 }
