--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -6,3 +6,8 @@
   position: absolute;
   background-image: url('../../../images/logo_place_header.svg');
 }
+
+.logo_place_header:hover {
+  opacity: 0.7;
+  transition: opacity 0.1s ease;
+}
