--- a/blocks/resources/__logo/resouces__logo.css
+++ b/blocks/resources/__logo/resouces__logo.css
@@ -7,3 +7,8 @@
   align-content: center;
   justify-content: center;
 }
+
+.resources__logo:hover {
+  opacity: 0.7;
+  transition: opacity 0.1s ease;
+}
